# gigop

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  CODEX.md  CODEX_ROUND3_BRIEF.md  CODEX_V2_BRIEF.md  Dockerfile  README.md  ROADMAP.md  n8n_copilot_learning_workflow.json  push_to_github.bat  pyproject.toml  test_copilot.py
.github/workflows/: deploy-hostinger.yml
deploy/: HOSTINGER_DEPLOYMENT.md  HOSTINGER_UBUNTU_COMMANDS.md  N8N_ASSISTANT.md  UPTIME_MONITORING.md  docker-compose.prod.yml  restart-stack.sh
deploy/n8n/: bootstrap-n8n.sh  gigoptimizer-assistant-workflow.json
examples/: wordpress_speed_snapshot.json
frontend/: index.html  package-lock.json  package.json  vite.config.mjs  vite.config.ts
gigoptimizer/: __init__.py  cli.py  config.py  models.py  orchestrator.py  security_cli.py  verify.py
scripts/: start-dashboard.ps1  verify-instance.ps1
tests/: __init__.py  test_ai_overview.py  test_assistant.py  test_assistant_api.py  test_assistant_rag.py  test_assistant_streaming.py  test_assistant_training.py  test_blueprint_api.py  test_config.py  test_conversation_memory.py  test_copilot_learning_service.py  test_copilot_round3.py  test_copilot_training_service.py  test_dashboard_api.py  test_extension_import.py  test_gig_identity.py  test_hostinger_service.py  test_knowledge_service.py  test_login_security.py  test_manhwa_portal.py  test_marketplace_keyword_switch.py  test_marketplace_reader.py  test_new_services.py  test_orchestrator.py  test_security.py  test_slack_service.py  test_step2_foundations.py  test_verify.py
(+126 files in other folders)
