[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigoptimizer-pro"
version = "0.1.0"
description = "Standalone Fiverr gig optimization MVP for the WordPress page speed niche."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18.0",
  "fastapi>=0.115.0",
  "gunicorn>=23.0.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "psycopg[binary]>=3.3.0",
  "python-dotenv>=1.0.1",
  "redis>=7.4.0",
  "rq>=2.7.0",
  "rq-dashboard>=0.8.6",
  "rq-scheduler>=0.14.0",
  "schedule>=1.2.2",
  "sentry-sdk>=2.57.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
live = [
  "pytrends>=4.9.2",
  "playwright>=1.58.0",
  "playwright-stealth>=2.0.3",
]

[project.scripts]
gigoptimizer = "gigoptimizer.cli:main"
gigoptimizer-web = "gigoptimizer.api.main:run"
gigoptimizer-verify = "gigoptimizer.verify:main"
gigoptimizer-security = "gigoptimizer.security_cli:main"
gigoptimizer-migrate = "gigoptimizer.persistence.migrate_from_json:main"
gigoptimizer-worker = "gigoptimizer.jobs.worker:main"
gigoptimizer-rq-scheduler = "gigoptimizer.jobs.scheduler_worker:main"

[tool.setuptools.packages.find]
include = ["gigoptimizer*"]
